# homelab

./: .gitignore  .sops.yaml  Justfile  README.md  repo-auth.yaml
.github/workflows/: build-alpine-bootc-pi5.yml  build-bootc-bin-alpine-arm64.yml  build-bootc-sdcard-image.yml  build-nixos-bootc-rpi5.yml  publish-cluster-artifact.yml
apps/media/automation/: README.md  bootstrap-job.yaml  credentials.sops.yaml  ingress.yaml  kustomization.yaml  releases.yaml  source.yaml
apps/media/immich/: README.md  kustomization.yaml
clusters/homelab/: README.md  kustomization.yaml
clusters/homelab/bootstrap/: cluster.yaml  kustomization.yaml  source.yaml
clusters/homelab/cluster/: flux-operator.yaml  flux-ui.yaml  immich-database.yaml  immich.yaml  jellyfin.yaml  kustomization.yaml  media-automation.yaml  nodes.yaml  (+4 more)
clusters/ins1/: kustomization.yaml
docs/: architecture-plan.md  immich-settings.html  networking.md  secrets.md
experiments/almalinux-bootc-rpi5/: README.md
experiments/alpine-bootc-pi5/: Containerfile  Justfile
experiments/fedora-iot-rpi5/: README.md
experiments/nixos-bootc-rpi5/: Containerfile  README.md  flake.nix
flux/: flux-instance-config.yaml  flux-instance.yaml
flux/my-cluster/: .sops.yaml  repo-auth.yaml  secrets-kustomization.yaml  sops.age.yaml
hosts/homelab/: README.md
hosts/instance1/: README.md
platform/controllers/: kustomization.yaml
platform/flux-ui/: kustomization.yaml
platform/networking/: kustomization.yaml
tools/ci/: Containerfile  stage-artifact.sh
tools/homelab-cli/: Cargo.toml
tools/homelab-cli/src/: main.rs
(+154 files in other folders)
